--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Test Task</title>
@@ -83,8 +83,8 @@
                     <div class="col_5">
                         <img src="./assets/pexels-photo-4173140.jpeg" alt="" />
                     </div>
-                    <div class="col_5" style="flex-direction: column;">
-                        <img src="./assets/pexels-photo-5560290.jpeg" style="width: 100%;" alt="" />
+                    <div class="col_5">
+                        <img src="./assets/pexels-photo-5560290.jpeg"alt="" />
                     </div>
                 </div>
                 <h4>this is the collection</h4>
@@ -93,14 +93,14 @@
                         <div class="col_2">
                             <img src="./assets/pexels-photo-10767063.jpeg" alt="" />
                         </div>
-                        <div class="col_2" style="flex-direction: column;">
-                            <img src="./assets/pexels-photo-6141242.jpeg" style="width: 100%;" alt="" />
+                        <div class="col_2">
+                            <img src="./assets/pexels-photo-6141242.jpeg"alt="" />
                         </div>
-                        <div class="col_2" style="flex-direction: column;">
-                            <img src="./assets/pexels-photo-1906818.jpeg" style="width: 100%;" alt="" />
+                        <div class="col_2">
+                            <img src="./assets/pexels-photo-1906818.jpeg"alt="" />
                         </div>
-                        <div class="col_2" style="flex-direction: column;">
-                            <img src="./assets/pexels-photo-2181872.jpeg" style="width: 100%;" alt="" />
+                        <div class="col_2">
+                            <img src="./assets/pexels-photo-2181872.jpeg"alt="" />
                         </div>
                     </div>
                 </div>
