--- a/index.html
+++ b/index.html
@@ -69,11 +69,14 @@
         </div>
         <div class="content">
             <div class="content_top">
-                <h2>I am 120 px</h2>
-                <h4>I am 100 px</h4>
-                <h5>I am 50 px</h5>
-                <p>make sure we look the same</p>
-                <button>shop now</button>
+                <img src="./assets/pexels-photo-4110882.jpeg" alt="" />
+                <div class="texts">
+                    <h2>I am 120 px</h2>
+                    <h4>I am 100 px</h4>
+                    <h5>I am 50 px</h5>
+                    <p>make sure we look the same</p>
+                    <button>shop now</button>
+                </div>
             </div>
             <div class="content_main">
                 <h3>I am 40 px, make sure I look the same</h3>
@@ -84,7 +87,7 @@
                         <img src="./assets/pexels-photo-4173140.jpeg" alt="" />
                     </div>
                     <div class="col_5">
-                        <img src="./assets/pexels-photo-5560290.jpeg"alt="" />
+                        <img src="./assets/pexels-photo-5560290.jpeg" alt="" />
                     </div>
                 </div>
                 <h4>this is the collection</h4>
@@ -94,13 +97,13 @@
                             <img src="./assets/pexels-photo-10767063.jpeg" alt="" />
                         </div>
                         <div class="col_2">
-                            <img src="./assets/pexels-photo-6141242.jpeg"alt="" />
+                            <img src="./assets/pexels-photo-6141242.jpeg" alt="" />
                         </div>
                         <div class="col_2">
-                            <img src="./assets/pexels-photo-1906818.jpeg"alt="" />
+                            <img src="./assets/pexels-photo-1906818.jpeg" alt="" />
                         </div>
                         <div class="col_2">
-                            <img src="./assets/pexels-photo-2181872.jpeg"alt="" />
+                            <img src="./assets/pexels-photo-2181872.jpeg" alt="" />
                         </div>
                     </div>
                 </div>
